Fix blurred font when using MS IME theme
Reproduce by changing font scale factor to 1.25.
Fix by replacing `-arrow-rise` property with `margin` property.

--- a/ibus-tweaker@tuberry.github.com/stylesheet.css
+++ b/ibus-tweaker@tuberry.github.com/stylesheet.css
@@ -6,6 +6,7 @@
 
 
 .ibus-tweaker-candidate-popup-content {
+    margin: 0.3em;
     border-radius: 0.2em;
     border-width: 1px;
     padding: 0;
@@ -39,7 +40,6 @@
 .ibus-tweaker-candidate-popup-boxpointer {
     -arrow-background-color: transparent;
     -arrow-border-radius: 0.75em;
-    -arrow-rise: 0.3em;
 }
 
 /*
